Jack 1. Fix refactor code.